--- a/public/css/pages/booking.css
+++ b/public/css/pages/booking.css
@@ -2,41 +2,34 @@
     opacity: 0;
     position: fixed;
     width: 0;
-  }
+}
 
-  .timeslot_button > * {
-      margin-top: 10px
-  }
-  
-
+.timeslot_button>* {
+    margin-top: 10px
+}
 
 .timeslot_button label {
-display: inline-block;
-background-color: rgb(255, 255, 255);
-padding: 10px 20px;
-font-family: sans-serif, Arial;
-font-size: 16px;
-border: 1px solid #444;
-border-radius: 4px;
+    display: inline-block;
+    background-color: rgb(255, 255, 255);
+    padding: 10px 20px;
+    font-size: 16px;
+    border: 1px solid rgb(223, 223, 223);
+    border-radius: 4px;
 }
 
-.timeslot_button input[type="radio"]:disabled + label {
+.timeslot_button input[type="radio"]:disabled+label {
     background-color: rgb(161, 159, 161);
-    border-color:rgb(161, 159, 161);
+    border-color: rgb(161, 159, 161);
 }
 
-
-
-.timeslot_button input[type="radio"]:checked + label {
+.timeslot_button input[type="radio"]:checked+label {
     background-color: rgb(79, 216, 127);
     border-color: rgb(79, 216, 127);
 }
 
-
 /* .timeslot_button input[type="radio"]:hover + label {
     background-color: #ddd;
 } */
-
 
 /* #book_date {
     
