Force english for calandar

--- a/templates/customer/book-now.html
+++ b/templates/customer/book-now.html
@@ -14,6 +14,7 @@
 
         var options = {
             type:'date',
+            lang: 'en',
             disabledWeekDays: {{ disabled_days }}
         }
             
