--- a/templates/components/listing-card-bookings.html
+++ b/templates/components/listing-card-bookings.html
@@ -1,6 +1,13 @@
 <a class="listing-card-a pb-5" href="/discover/{{ item['_id'] }}">
-    <div class="box listing-card p-6" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}')">
+    <div class="box listing-card p-6" style="background-image: url('data:image/jpeg;base64, {{ list.tour_img }}')">
         <div class="listing-card-blur"></div>
+        {% if 1 <= item.process_step <= 4 %}
+            <span class="tag is-info is-light mb-4">Planning</span>
+        {% elif 4 < item.process_step < 7 %}
+            <span class="tag is-success is-light mb-4">Confirmed</span>
+        {% elif item.process_step >= 7 %}
+            <span class="tag is-warning is-light mb-4">Completed</span>
+        {% endif %}
         <div class="listing-author">
             <div class="profile-img"
                 style="background-image: url('data:image/jpeg;base64, {{ item['tg_uid']|user_pfp }}')">
@@ -13,7 +20,7 @@
             </div>
         </div>
         <div class="m-2">
-            <h1 class='title is-2 has-text-white'>{{ item["tour_name"] }}</h1>
+            <h1 class='title is-2 has-text-white'>{{ list.tour_name }}</h1>
         </div>
     </div>
 </a>
