Added dynamic pfp

--- a/templates/chat.html
+++ b/templates/chat.html
@@ -83,7 +83,7 @@
                                         <a href='/chat/{{ dict["id"] }}'>
                                             <div class="p-2 listing-author">
                                                 <div class="profile-img"
-                                                     style="background-image: url('/pfp.jpg')"></div>
+                                                     style="background-image: url('data:image/jpeg;base64, {{ dict.profile_img }}')"></div>
                                                 <div class="ml-2"><b>{{ dict["name"] }}</b></div>
                                             </div>
                                         </a>
